# configzen

./: .copier-answers.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  install  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup-local.bash  setup.py  sitemap.xml  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  functionality.yaml  functionality.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  doclinks.yml  documentation-links.yml  lint.yml  mypy.yml  news.yml  publish.yml  pylint.yml  python-package.yml  release.yml  smokeshow.yml  test.yml
api/: index.html
changelog/: index.html
changes/: .gitignore
code_of_conduct/: index.html
configzen/: __init__.py  __main__.py  _detach.py  _isolation.py  _setup.py  base.py  config.py  configuration.py  context.py  copy_context.py  data.py  decorators.py  engine.py  errors.py  field.py  interpolation.py  model.py  module.py  module_proxy.py  parser.py  processor.py  recipes.py  replacements.py  route.py  routes.py  schema.py  section.py  sources.py  typedefs.py
configzen/contrib/: __init__.py  pyproject.py
configzen/engines/: configparser_engine.py  json_engine.py  yaml_engine.py
configzen/formats/: __init__.py  std_json.py  std_plist.py  toml.py  yaml.py
contributing/: index.html
docs/: api.md  contributing.md  index.md  index.rst  requirements.txt
docs/api/: decorators.md  errors.md  field.md  interpolation.md  model.md  processor.md  route.md
examples/: asynctest.py  asynctestjson.py  config.py  config.yaml  connspec.py  connspec.yaml  databases.yaml  test.py  test.yaml  testjson.py
examples/copy/: base.yaml  before.yaml  result.txt
examples/expand/: final.yaml  intermediate.yaml
examples/extend/: after.yaml  before.yaml  final.yaml  intermediate.yaml  result.txt
examples/misc/: config.py  database.yaml
news/: +1623b7c4.changed.md  .gitignore
scripts/: bump.sh  fe6ed23.sh  lock  lock.sh  release  release.py  skeleton.0.0.2rc-150-gf81555e.bash  skeleton.0.0.2rc-161-g1ae7659.bash  skeleton.0.0.2rc-180-g2a2d737.bash  skeleton.0.0.2rc-215-g792492f.bash  skeleton.0.0.2rc-216-gfb1d965.bash  skeleton.0.0.2rc-218-g8123b8a.bash  skeleton.0.0.2rc-245-g8c04714.bash  skeleton.sh  sync.sh
search/: search_index.json
tests/: conftest.py  test_configzen.py  test_context.py  test_copy_context.py  test_module_proxy.py  test_route.py  test_routes.py
tests/test_config/: test_meta.py  test_route.py
tests/test_config/test_model/: test_load.py
tests/test_configuration/: test_io.py
tests/test_module_wrapping/: config.py  test_wrapping.py
tests/test_supported_formats/: conftest.py  test_supported_formats.py
tests/test_supported_formats/data/: data.bson  data.cbor2  data.configobj  data.ini  data.ion  data.json  data.msgpack  data.properties  data.shellvars  data.toml  data.yaml
