[tool.poetry]
name = "configzen"
version = "0.6.0"
description = "The easiest way to manage configuration files in Python"
authors = ["bswck <bswck.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bswck/configzen"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.10"
anyconfig = "^0.13.0"
typing-extensions = { version = "^4.5.0", python = ">=3.9,<3.11" }
aiofiles = { version = "^23.1.0" }
pyyaml = { version = "^6.0" }
toml = { version = "^0.10.2" }
click = "^8.1.3"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"
mkdocs = "^1.4.3"
mkdocstrings = "^0.22.0"
pylint = "^2.17.4"
anyconfig-ion-backend = "^0.1.1"
anyconfig-bson-backend = "^0.1.2"
anyconfig-cbor2-backend = "^0.1.2"
anyconfig-cbor-backend = "^0.1.2"
anyconfig-configobj-backend = "^0.1.4"
anyconfig-msgpack-backend = "^0.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"
jinja2 = "<3.1.0"

[tool.ruff]
target-version = "py39"
select = [
    "F", "E", "W", "I", "UP", "N", "S", "C", "B", "A", "T", "Q", "RUF", "YTT", "BLE", "ANN", "FBT", "PL", "TRY", "RSE",
    "SLF", "DTZ", "EXE", "ISC", "ICN", "G", "INP", "PIE", "RET", "SIM", "TID", "TCH", "ARG", "PTH"
]
ignore = [
    "DTZ005", "INP001", "TCH003", "ANN101", "ANN102", "ANN401", "I001", "TID252", "T201", "B905", "S101", "TRY003",
    "PLR2004"
]
fix = true
exclude = ["examples/", "tests/"]

#[tool.poetry.scripts]
#configzen = "configzen.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
